<resources>
    <string name="app_name">Note Me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titolo_nuova_nota">title</string>
    <string name="inserisci_testo_qui">your note here</string>
    <string name="sto_registrando">I\'m recording</string>
    <string name="audio">Audio</string>
    <string name="nota_eliminata">Note deleted.</string>
    <string name="annulla">Cancel</string>
    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="nota_senza_titolo">no title</string>
    <string name="eliminare_nota">Confirm deletion of recorded audio?</string>
    <string name="elimina">Delete</string>
    <string name="aggiungi_tag">add tag</string>
    <string name="stop">Stop</string>
    <string name="eliminare_foto">Remove attached picture?</string>
    <string name="scade">Expires: </string>
    <string name="scegli_un_colore">Select a color</string>
    <string name="note_scadute_eliminate">Expired notes deleted.</string>
    <string name="action_search">Search</string>
    <string name="share">Share</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_login">Login</string>
    <string name="invalid_credentials">Invalid credentials, please check if you made some texting mistakes.</string>
</resources>
